sumo/tests/dfrouter/errors/detector_files/broken_detectors_file2a/errors.dfrouter
Error: expected end of tag 'detectorDefinition'
 In file 'input_messstrecke.det.xml'
 At line/column 8/3.

Quitting (on error).
